--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,48 +2,49 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Task List</title>
 </head>
 <body>
 <header class="bg-dark text-white text-center py-3">
-  <h1>My Tasks</h1>
+    <h1>My Tasks</h1>
 </header>
 
 <div class="container mt-4">
-  <a th:href="@{/tasks/new}" class="btn btn-primary mb-3">Add Task</a>
-  <table class="table table-striped">
-    <thead >
-    <tr>
-      <th>Id:</th>
-      <th>Name:</th>
-      <th>Description:</th>
-      <th>Completed:</th>
-      <th>Actions:</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="task:${tasks}">
-      <td th:text="${task.id}"></td>
-      <td th:text="${task.name}"></td>
-      <td th:text="${task.description}"></td>
-      <td>
-        <span th:if="${task.completed}" class="text-success">Yes</span>
-        <span th:unless="${task.completed}" class="text-danger">No</span>
-      </td>
-      <td>
-        <a th:href="@{/edit/{id}(id=${task.id})}" class="btn btn-info">Edit</a>
-        <a th:href="@{/delete/{id}(id=${task.id})}" class="btn btn-danger">Delete</a>
-      </td>
-    </tr>
-    </tbody>
-  </table>
+    <a th:href="@{/tasks/new}" class="btn btn-primary mb-3">Add Task</a>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Id:</th>
+            <th>Name:</th>
+            <th>Description:</th>
+            <th>Completed:</th>
+            <th>Actions:</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="task:${tasks}">
+            <td th:text="${task.id}"></td>
+            <td th:text="${task.name}"></td>
+            <td th:text="${task.description}"></td>
+            <td>
+                <span th:if="${task.completed}" class="text-success">Yes</span>
+                <span th:unless="${task.completed}" class="text-danger">No</span>
+            </td>
+            <td>
+                <a th:href="@{/edit/{id}(id=${task.id})}" class="btn btn-info">Edit</a>
+                <a th:href="@{/delete/{id}(id=${task.id})}" class="btn btn-danger">Delete</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 
 </div>
 
 <footer class="text-center py-3">
-  <p>&copy; 2023 - Tomas Lenzi</p>
+    <p>&copy; 2023 - Tomas Lenzi</p>
 </footer>
 
 </body>
